Correction alignment

--- a/styles/equation.css
+++ b/styles/equation.css
@@ -80,14 +80,15 @@
   color: red;
   font-size: 18px;
   opacity: 0.8;
-  position: absolute;
-  left: 50%;
-  top: 0px;
+  position: static;
   margin-top: 0px;
   margin-bottom: 0px;
   min-height: 22px;
-  max-width: 360px;
+  max-width: 220px;
+  width: auto;
   white-space: normal;
+  word-break: break-word;
+  text-align: left;
 }
 
 .trigproblem{
@@ -242,7 +243,8 @@
   width: 150px;
   font-family: var( --font_family);
   font-size: 40px;
-  height: 50px;
+  min-height: 40px;
+  height: 100%;
   background: var(--button_background);
   border: solid 1px var(--button_border);
   color: gray;
@@ -250,8 +252,22 @@
   transition: opacity 0.15s;
   padding-left: 10px;
   vertical-align: middle;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
 }
 
+.numrestart {
+  height: 40px;
+  display: flex;
+  align-items: stretch;
+}
+
+.problem {
+  height: 40px;
+  display: flex;
+  align-items: center;
+}
 .numinput:hover{
   opacity: 0.8;
 }
